# UnizarNativeOpenCVServer

./: CMakeLists.txt  README.md
src/: Main.cpp
src/proto/: ProtoResult.proto
src/structures/: Object.cpp  ObjectDl.cpp  Recognizer.cpp  Result.cpp  TestImage.cpp  Time.cpp  utils.cpp
src/structures/headers/: Object.h  ObjectDl.h  ObjectKp.h  ProtoResult.pb.h  Recognizer.h  RecognizerDl.h  Result.h  TestImage.h  Time.h
structures/: ObjectKp.cpp  ProtoResult.pb.cc  RecognizerDl.cpp  Tester.cpp  Timer.cpp
structures/headers/: Tester.h  Timer.h  utils.h
